# feup-aeda-project

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  codecov.yml  main.cpp  nano.save  stream.cpp  stream.h  streamZ.h  user.h
.github/workflows/: cpp_build.yml
docs/: Doxyfile
docs/html/: _c_make_lists_8txt.html  admin_8cpp.html  admin_8cpp_source.html  admin_8h.html  admin_8h_source.html  admin__manager_8cpp.html  admin__manager_8cpp_source.html  admin__manager_8h.html  admin__manager_8h_source.html  admin_already_set_8cpp.html  admin_already_set_8cpp_source.html  admin_already_set_8h.html  admin_already_set_8h_source.html  admin_not_set_8cpp.html  admin_not_set_8cpp_source.html  admin_not_set_8h.html  admin_not_set_8h_source.html  admin_view_8cpp.html  admin_view_8cpp_source.html  admin_view_8h.html  admin_view_8h_source.html  annotated.html  annotated_dup.js  auxiliary_functions_8cpp.html  auxiliary_functions_8cpp.js  auxiliary_functions_8cpp_source.html  auxiliary_functions_8h.html  auxiliary_functions_8h.js  auxiliary_functions_8h_source.html  bst_8h.html  bst_8h_source.html  class_admin-members.html  class_admin.html  class_admin__coll__graph.map  class_admin__inherit__graph.map  class_admin_already_set-members.html  class_admin_already_set.html  class_admin_already_set.js  class_admin_manager-members.html  class_admin_manager.html  (+839 more)
docs/latex/: _c_make_lists_8txt.tex  admin_8cpp.tex  admin_8h.tex  admin__manager_8cpp.tex  admin__manager_8h.tex  admin_already_set_8cpp.tex  admin_already_set_8h.tex  admin_not_set_8cpp.tex  admin_not_set_8h.tex  admin_view_8cpp.tex  admin_view_8h.tex  annotated.tex  auxiliary_functions_8cpp.tex  auxiliary_functions_8h.tex  bst_8h.tex  class_admin.tex  class_admin_already_set.tex  class_admin_manager.tex  (+262 more)
src/: CMakeLists.txt  main.cpp
src/auth/: currentSession.cpp  currentSession.h
src/exception/: invalidAge.h  invalidFeedback.cpp  invalidFeedback.h  invalidStreamBuild.cpp  invalidStreamBuild.h  invalidStreamToAdd.cpp  invalidStreamToAdd.h  nicknameNotFound.cpp  nicknameNotFound.h  noStreamWithID.cpp  streamAlreadyFinished.h  streamNotFound.h  streamerAlreadyStreaming.cpp  streamerAlreadyStreaming.h
src/exception/adminAlreadySet/: adminAlreadySet.cpp  adminAlreadySet.h
src/exception/adminNotSet/: adminNotSet.cpp  adminNotSet.h
src/exception/invalidAge/: invalidAge.cpp  invalidAge.h
src/exception/invalidFeedback/: invalidFeedback.h
src/exception/invalidPurchaseAvailability/: invalidPurchaseAvailability.h
src/exception/invalidStreamAdd/: invalidStreamToAdd.cpp  invalidStreamToAdd.h
src/exception/invalidStreamBuild/: invalidStreamBuild.h
src/exception/nicknameAlreadyAdded/: nicknameAlreadyAdded.cpp  nicknameAlreadyAdded.h
src/exception/nicknameNotFound/: nicknameNotFound.cpp  nicknameNotFound.h
src/exception/noStreamWithID/: noStreamWithID.cpp  noStreamWithID.h
src/exception/orderLimitReached/: orderLimitReached.h
src/exception/orderNotFound/: orderNotFound.h
src/exception/streamAlreadyFinished/: streamAlreadyFinished.cpp  streamAlreadyFinished.h
src/exception/streamNotFound/: streamNotFound.cpp  streamNotFound.h
src/exception/streamerAlreadyStreaming/: streamerAlreadyStreaming.cpp  streamerAlreadyStreaming.h
src/exception/streamerHasNoDonations/: streamerHasNoDonations.h
src/exception/streamerNotStreaming/: streamerNotStreaming.h
src/exception/userAlreadyExists/: userAlreadyExists.cpp  userAlreadyExists.h
src/exception/userNotFound/: userNotFound.cpp  userNotFound.h
src/exception/viewerAlreadyOrdered/: viewerAlreadyOrdered.h
src/leaderboard/: leaderboard.h
src/model/stream/: dataStream.txt  stream.cpp  stream.h  streamManager.cpp  streamManager.h
src/model/stream/finishedStream/: finishedStream.cpp  finishedStream.h
src/model/stream/privateStream/: privateStream.cpp  privateStream.h
src/model/stream/publicStream/: publicStream.cpp  publicStream.h
src/model/streamZ/: streamZ.cpp  streamZ.h
src/model/transactions/donations/: donation.cpp  donation.h  streamerDonations.cpp  streamerDonations.h
src/model/transactions/merch/: merchRequest.cpp  merchRequest.h  streamerMerch.cpp  streamerMerch.h
src/model/user/: user.cpp  user.h  user_manager.cpp  user_manager.h
src/model/user/admin/: admin.cpp  admin.h  admin_manager.cpp  admin_manager.h  dataAdmin.txt
src/model/user/streamer/: dataStreamer.txt  streamer.cpp  streamer.h  streamer_manager.cpp  streamer_manager.h
src/model/user/viewer/: dataViewer.txt  viewer.cpp  viewer.h  viewer_manager.cpp  viewer_manager.h
src/stream/: finishedStream.cpp  finishedStream.h  stream.cpp  stream.h  streamManager.cpp  streamManager.h
src/stream/finishedStream/: finishedStream.cpp  finishedStream.h
src/stream/privateStream/: privateStream.cpp  privateStream.h
src/stream/publicStream/: publicStream.cpp  publicStream.h
src/streamZ/: streamZ.cpp  streamZ.h
src/ui/: initialPage.cpp  initialPage.h  ui.h  ui_manager.cpp  ui_manager.h
src/ui/adminView/: adminView.cpp  adminView.h
src/ui/initialPage/: initialPage.cpp  initialPage.h
src/ui/leaderboardPage/: leaderboardPage.cpp  leaderboardPage.h
src/ui/loginPage/: loginPage.cpp  loginPage.h
src/ui/registerPage/: registerPage.cpp  registerPage.h
src/ui/streamView/: streamView.cpp  streamView.h
src/ui/streamerView/: streamerView.cpp  streamerView.h
src/ui/viewerView/: viewerView.cpp  viewerView.h
src/ui/watchingStream/: watchingStream.cpp  watchingStream.h
src/user/: user.cpp  user.h  user_manager.cpp  user_manager.h
src/user/admin/: admin.cpp  admin.h  admin_manager.cpp  admin_manager.h
src/user/streamer/: dataStreamer.txt  streamer.cpp  streamer.h  streamer_manager.cpp  streamer_manager.h
src/user/viewer/: dataViewer.txt  viewer.cpp  viewer.h  viewer_manager.cpp  viewer_manager.h
src/utils/date/: date.cpp  date.h
src/utils/filescache/: dataStream.txt  dataViewer.txt
src/utils/leaderboard/: leaderboard.cpp  leaderboard.h  leaderboard_manager.cpp  leaderboard_manager.h
src/utils/otherFunctions/: auxiliaryFunctions.cpp  auxiliaryFunctions.h
test/: CMakeLists.txt
(+1614 files in other folders)
